--- a/parent.html
+++ b/parent.html
@@ -79,23 +79,17 @@
       <main class="w-full flex flex-col gap-[40px]">
         <div class="flex flex-col gap-[15px] justify-between items-start">
           <h2 class="text-[24px] font-[700] text-[#212B36]">ღონისძიებები</h2>
-          <div class="w-full flex justify-between sm:justify-end">
+          <div class="w-full flex justify-start">
             <button
               class="text-[#919EAB] flex items-center justify-center flex sm:hidden"
             >
               <img src="./assets/back.png" class="size-[24px]" />
               უკან
             </button>
-            <button
-              class="px-[12px] py-[6px] bg-[#212B36] rounded-[8px] flex justify-center items-center gap-[8px] text-white text-[14px]"
-            >
-              <img src="./assets/add.png" class="size-[20px]" />
-              ღონისძიების დამატება
-            </button>
           </div>
         </div>
         <section class="w-full flex flex-wrap gap-[25px]">
-          <!-- post -->
+          <!-- post-parents -->
           <article
             class="w-full lg:odd:w-[calc(50%-25px)] lg:even:w-[calc(50%)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
           >
@@ -113,10 +107,17 @@
                 ძვირფასო მშობლებო. პარასკევს გვექნება საახალწლო ზეიმი. გთხოვთ
                 ბავშვებს ჩააცვათ შესაბამისად და გელოდებით
               </p>
+              <div class="flex justify-end">
+                <button
+                  class="text-[13px] px-[8px] py-[4px] rounded-[8px] text-white bg-[#F8D063]"
+                >
+                  დადასტურებულია
+                </button>
+              </div>
             </div>
           </article>
           <!-- post -->
-          <!-- post -->
+          <!-- post-parents -->
           <article
             class="w-full lg:odd:w-[calc(50%-25px)] lg:even:w-[calc(50%)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
           >
@@ -134,10 +135,17 @@
                 ძვირფასო მშობლებო. პარასკევს გვექნება საახალწლო ზეიმი. გთხოვთ
                 ბავშვებს ჩააცვათ შესაბამისად და გელოდებით
               </p>
+              <div class="flex justify-end">
+                <button
+                  class="text-[13px] px-[8px] py-[4px] rounded-[8px] text-white bg-[#212B36]"
+                >
+                  დადასტურება
+                </button>
+              </div>
             </div>
           </article>
           <!-- post -->
-          <!-- post -->
+          <!-- post-parents -->
           <article
             class="w-full lg:odd:w-[calc(50%-25px)] lg:even:w-[calc(50%)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
           >
@@ -155,10 +163,17 @@
                 ძვირფასო მშობლებო. პარასკევს გვექნება საახალწლო ზეიმი. გთხოვთ
                 ბავშვებს ჩააცვათ შესაბამისად და გელოდებით
               </p>
+              <div class="flex justify-end">
+                <button
+                  class="text-[13px] px-[8px] py-[4px] rounded-[8px] text-white bg-[#212B36]"
+                >
+                  დადასტურება
+                </button>
+              </div>
             </div>
           </article>
           <!-- post -->
-          <!-- post -->
+          <!-- post-parents -->
           <article
             class="w-full lg:odd:w-[calc(50%-25px)] lg:even:w-[calc(50%)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
           >
@@ -176,6 +191,13 @@
                 ძვირფასო მშობლებო. პარასკევს გვექნება საახალწლო ზეიმი. გთხოვთ
                 ბავშვებს ჩააცვათ შესაბამისად და გელოდებით
               </p>
+              <div class="flex justify-end">
+                <button
+                  class="text-[13px] px-[8px] py-[4px] rounded-[8px] text-white bg-[#212B36]"
+                >
+                  დადასტურება
+                </button>
+              </div>
             </div>
           </article>
           <!-- post -->
