--- a/კვება/index.html
+++ b/კვება/index.html
@@ -101,9 +101,14 @@
                 ჯგუფის სახელი
               </h2>
             </div>
-            <select>
-              <option>თვე</option>
-            </select>
+            <label class="flex justify-center items-center">
+              <div>
+                <img src="./assets/date_icon.svg" />
+              </div>
+              <select class="appearance-none">
+                <option>თვე</option>
+              </select>
+            </label>
           </div>
         </div>
         <!-- calendar-->
