--- a/კვება/index.html
+++ b/კვება/index.html
@@ -285,6 +285,10 @@
               <div
                 class="absolute left-[calc(90%)] top-1/2 -translate-y-1/2 w-[320px] h-fit rounded-[5px] shadow-[0px_4px_16px_0px_#00000040] bg-white z-30 py-[10px]"
               >
+                <img
+                  src="./assets/vector.svg"
+                  class="absolute left-[0] top-[30px]"
+                />
                 <div
                   class="text-[14px] flex flex-col gap-[8px] px-[20px] py-[16px]"
                 >
