--- a/კვება/index.html
+++ b/კვება/index.html
@@ -244,32 +244,32 @@
             >
               <span class="text-right select-none">4</span>
               <div
-                class="flex flex-row lg:flex-col gap-[2px] md:gap-[4px] h-full items-end lg:items-start lg:justify-end"
+                class="flex flex-row md:flex-col gap-[2px] sm:gap-[4px] h-full items-end md:items-start md:justify-end"
               >
                 <!-- კვება -->
                 <div
-                  class="bg-[#00B8D93D] text-transparent lg:text-[#006C9C] size-[6px] md:size-[12px] overflow-hidden rounded-full lg:rounded-[4px] lg:w-[73.913%] lg:h-fit lg:aspect-[5.6] font-[400] text-[10px] lg:px-[5px] lg:py-[3px] flex items-center cursor-pointer"
+                  class="bg-[#00B8D93D] text-transparent md:text-[#006C9C] size-[6px] sm:size-[12px] overflow-hidden rounded-full md:rounded-[4px] md:w-[73.913%] md:h-fit md:aspect-[5.6] font-[400] text-[10px] md:px-[5px] md:py-[3px] flex items-center cursor-pointer"
                 >
                   საუზმე
                 </div>
                 <!-- კვება -->
                 <!-- კვება -->
                 <div
-                  class="bg-[#00A76F3D] text-transparent lg:text-[#007867] size-[6px] md:size-[12px] overflow-hidden rounded-full lg:rounded-[4px] lg:w-[73.913%] lg:h-fit lg:aspect-[5.6] font-[400] text-[10px] lg:px-[5px] lg:py-[3px] flex items-center cursor-pointer"
+                  class="bg-[#00A76F3D] text-transparent md:text-[#007867] size-[6px] sm:size-[12px] overflow-hidden rounded-full md:rounded-[4px] md:w-[73.913%] md:h-fit md:aspect-[5.6] font-[400] text-[10px] md:px-[5px] md:py-[3px] flex items-center cursor-pointer"
                 >
                   ხემსი
                 </div>
                 <!-- კვება -->
                 <!-- კვება -->
                 <div
-                  class="bg-[#FFAB003D] text-transparent lg:text-[#7A4100] size-[6px] md:size-[12px] overflow-hidden rounded-full lg:rounded-[4px] lg:w-[73.913%] lg:h-fit lg:aspect-[5.6] font-[400] text-[10px] lg:px-[5px] lg:py-[3px] flex items-center cursor-pointer"
+                  class="bg-[#FFAB003D] text-transparent md:text-[#7A4100] size-[6px] sm:size-[12px] overflow-hidden rounded-full md:rounded-[4px] md:w-[73.913%] md:h-fit md:aspect-[5.6] font-[400] text-[10px] md:px-[5px] md:py-[3px] flex items-center cursor-pointer"
                 >
                   სადილი
                 </div>
                 <!-- კვება -->
                 <!-- კვება -->
                 <div
-                  class="bg-[#FF56303D] text-transparent lg:text-[#FF6B6B] size-[6px] md:size-[12px] overflow-hidden rounded-full lg:rounded-[4px] lg:w-[73.913%] lg:h-fit lg:aspect-[5.6] font-[400] text-[10px] lg:px-[5px] lg:py-[3px] flex items-center cursor-pointer"
+                  class="bg-[#FF56303D] text-transparent md:text-[#FF6B6B] size-[6px] sm:size-[12px] overflow-hidden rounded-full md:rounded-[4px] md:w-[73.913%] md:h-fit md:aspect-[5.6] font-[400] text-[10px] md:px-[5px] md:py-[3px] flex items-center cursor-pointer"
                 >
                   სადილი
                 </div>
@@ -283,12 +283,18 @@
               <span class="text-right select-none">5</span>
               <!-- დელატალური პოპაფი-->
               <div
-                class="absolute left-[calc(90%)] top-1/2 -translate-y-1/2 w-[320px] h-fit rounded-[5px] shadow-[0px_4px_16px_0px_#00000040] bg-white z-30 py-[10px]"
+                class="hidden md:flex absolute left-[calc(90%)] top-1/2 -translate-y-1/2 w-[320px] h-fit rounded-[5px] shadow-[0px_4px_16px_0px_#00000040] bg-white z-30 py-[10px] flex flex-col gap-[8px]"
               >
                 <img
                   src="./assets/vector.svg"
-                  class="absolute left-[0] top-[30px]"
+                  class="absolute left-[0] top-[40px]"
                 />
+                <button>
+                  <img
+                    src="./assets/close.png"
+                    class="absolute right-[5px] top-[5px]"
+                  />
+                </button>
                 <div
                   class="text-[14px] flex flex-col gap-[8px] px-[20px] py-[16px]"
                 >
@@ -302,32 +308,32 @@
                 </div>
               </div>
               <div
-                class="flex flex-row lg:flex-col gap-[2px] md:gap-[4px] h-full items-end lg:items-start lg:justify-end"
+                class="flex flex-row md:flex-col gap-[2px] sm:gap-[4px] h-full items-end md:items-start md:justify-end"
               >
                 <!-- კვება -->
                 <div
-                  class="bg-[#00B8D93D] text-transparent lg:text-[#006C9C] size-[6px] md:size-[12px] overflow-hidden rounded-full lg:rounded-[4px] lg:w-[73.913%] lg:h-fit lg:aspect-[5.6] font-[400] text-[10px] lg:px-[5px] lg:py-[3px] flex items-center cursor-pointer"
+                  class="bg-[#00B8D93D] text-transparent md:text-[#006C9C] size-[6px] sm:size-[12px] overflow-hidden rounded-full md:rounded-[4px] md:w-[73.913%] md:h-fit md:aspect-[5.6] font-[400] text-[10px] md:px-[5px] md:py-[3px] flex items-center cursor-pointer"
                 >
                   საუზმე
                 </div>
                 <!-- კვება -->
                 <!-- კვება -->
                 <div
-                  class="bg-[#00A76F3D] text-transparent lg:text-[#007867] size-[6px] md:size-[12px] overflow-hidden rounded-full lg:rounded-[4px] lg:w-[73.913%] lg:h-fit lg:aspect-[5.6] font-[400] text-[10px] lg:px-[5px] lg:py-[3px] flex items-center cursor-pointer"
+                  class="bg-[#00A76F3D] text-transparent md:text-[#007867] size-[6px] sm:size-[12px] overflow-hidden rounded-full md:rounded-[4px] md:w-[73.913%] md:h-fit md:aspect-[5.6] font-[400] text-[10px] md:px-[5px] md:py-[3px] flex items-center cursor-pointer"
                 >
                   ხემსი
                 </div>
                 <!-- კვება -->
                 <!-- კვება -->
                 <div
-                  class="bg-[#FFAB003D] text-transparent lg:text-[#7A4100] size-[6px] md:size-[12px] overflow-hidden rounded-full lg:rounded-[4px] lg:w-[73.913%] lg:h-fit lg:aspect-[5.6] font-[400] text-[10px] lg:px-[5px] lg:py-[3px] flex items-center cursor-pointer"
+                  class="bg-[#FFAB003D] text-transparent md:text-[#7A4100] size-[6px] sm:size-[12px] overflow-hidden rounded-full md:rounded-[4px] md:w-[73.913%] md:h-fit md:aspect-[5.6] font-[400] text-[10px] md:px-[5px] md:py-[3px] flex items-center cursor-pointer"
                 >
                   სადილი
                 </div>
                 <!-- კვება -->
                 <!-- კვება -->
                 <div
-                  class="bg-[#919EAB3D] text-transparent lg:text-[#212B36] size-[6px] md:size-[12px] overflow-hidden rounded-full lg:rounded-[4px] lg:w-[73.913%] lg:h-fit lg:aspect-[5.6] font-[400] text-[10px] lg:px-[5px] lg:py-[3px] flex items-center cursor-pointer"
+                  class="bg-[#919EAB3D] text-transparent md:text-[#212B36] size-[6px] sm:size-[12px] overflow-hidden rounded-full md:rounded-[4px] md:w-[73.913%] md:h-fit md:aspect-[5.6] font-[400] text-[10px] md:px-[5px] md:py-[3px] flex items-center cursor-pointer"
                 >
                   2+ მეტი
                 </div>
