--- a/ივენთების შექმნა/parent.html
+++ b/ივენთების შექმნა/parent.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>KidNest</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body style="font-family: 'Noto Sans Georgian', sans-serif">
     <!-- header -->
     <header
       class="py-[21px] px-[32px] h-[81] flex justify-between items-center"
@@ -78,7 +84,9 @@
 
       <main class="w-full flex flex-col gap-[40px]">
         <div class="flex flex-col gap-[15px] justify-between items-start">
-          <h2 class="text-[24px] font-[700] text-[#212B36]">ღონისძიებები</h2>
+          <h2 class="text-[24px] font-[700] text-[#212B36] leading-[36px]">
+            ღონისძიებები
+          </h2>
           <div class="w-full flex justify-start">
             <button
               class="text-[#919EAB] flex items-center justify-center flex sm:hidden"
@@ -96,20 +104,24 @@
             <div class="flex flex-col gap-[16px]">
               <div class="flex justify-between text-[12px]">
                 <span
-                  class="bg-[#22C55E29] text-[#118D57] font-[700] px-[6px] py-[2px] rounded-[6px]"
+                  class="bg-[#22C55E29] text-[#118D57] font-[700] px-[6px] py-[2px] rounded-[6px] leading-[20px]"
                 >
                   1-დან 2 წლამდე
                 </span>
-                <p class="text-[#919EAB] font-[400]">25 დეკ. 2023 13:00 PM</p>
+                <p class="text-[#919EAB] font-[400] leading-[18px]">
+                  25 დეკ. 2023 13:00 PM
+                </p>
               </div>
-              <h2 class="text-[18px] font-[700]">ღონისძიების დასახელება</h2>
+              <h2 class="text-[18px] font-[700] leading-[22px]">
+                ღონისძიების დასახელება
+              </h2>
               <p class="text-[14px] text-[#919EAB] font-[600]">
                 ძვირფასო მშობლებო. პარასკევს გვექნება საახალწლო ზეიმი. გთხოვთ
                 ბავშვებს ჩააცვათ შესაბამისად და გელოდებით
               </p>
               <div class="flex justify-end">
                 <button
-                  class="text-[13px] px-[8px] py-[4px] rounded-[8px] text-white bg-[#F8D063]"
+                  class="text-[13px] px-[8px] py-[4px] rounded-[8px] text-white bg-[#F8D063] leading-[22px]"
                 >
                   დადასტურებულია
                 </button>
@@ -124,20 +136,24 @@
             <div class="flex flex-col gap-[16px]">
               <div class="flex justify-between text-[12px]">
                 <span
-                  class="bg-[#22C55E29] text-[#118D57] font-[700] px-[6px] py-[2px] rounded-[6px]"
+                  class="bg-[#22C55E29] text-[#118D57] font-[700] px-[6px] py-[2px] rounded-[6px] leading-[20px]"
                 >
                   1-დან 2 წლამდე
                 </span>
-                <p class="text-[#919EAB] font-[400]">25 დეკ. 2023 13:00 PM</p>
+                <p class="text-[#919EAB] font-[400] leading-[18px]">
+                  25 დეკ. 2023 13:00 PM
+                </p>
               </div>
-              <h2 class="text-[18px] font-[700]">ღონისძიების დასახელება</h2>
+              <h2 class="text-[18px] font-[700] leading-[22px]">
+                ღონისძიების დასახელება
+              </h2>
               <p class="text-[14px] text-[#919EAB] font-[600]">
                 ძვირფასო მშობლებო. პარასკევს გვექნება საახალწლო ზეიმი. გთხოვთ
                 ბავშვებს ჩააცვათ შესაბამისად და გელოდებით
               </p>
               <div class="flex justify-end">
                 <button
-                  class="text-[13px] px-[8px] py-[4px] rounded-[8px] text-white bg-[#212B36]"
+                  class="text-[13px] px-[8px] py-[4px] rounded-[8px] text-white bg-[#212B36] leading-[22px]"
                 >
                   დადასტურება
                 </button>
@@ -152,20 +168,24 @@
             <div class="flex flex-col gap-[16px]">
               <div class="flex justify-between text-[12px]">
                 <span
-                  class="bg-[#22C55E29] text-[#118D57] font-[700] px-[6px] py-[2px] rounded-[6px]"
+                  class="bg-[#22C55E29] text-[#118D57] font-[700] px-[6px] py-[2px] rounded-[6px] leading-[20px]"
                 >
                   1-დან 2 წლამდე
                 </span>
-                <p class="text-[#919EAB] font-[400]">25 დეკ. 2023 13:00 PM</p>
+                <p class="text-[#919EAB] font-[400] leading-[18px]">
+                  25 დეკ. 2023 13:00 PM
+                </p>
               </div>
-              <h2 class="text-[18px] font-[700]">ღონისძიების დასახელება</h2>
+              <h2 class="text-[18px] font-[700] leading-[22px]">
+                ღონისძიების დასახელება
+              </h2>
               <p class="text-[14px] text-[#919EAB] font-[600]">
                 ძვირფასო მშობლებო. პარასკევს გვექნება საახალწლო ზეიმი. გთხოვთ
                 ბავშვებს ჩააცვათ შესაბამისად და გელოდებით
               </p>
               <div class="flex justify-end">
                 <button
-                  class="text-[13px] px-[8px] py-[4px] rounded-[8px] text-white bg-[#212B36]"
+                  class="text-[13px] px-[8px] py-[4px] rounded-[8px] text-white bg-[#212B36] leading-[22px]"
                 >
                   დადასტურება
                 </button>
@@ -180,20 +200,24 @@
             <div class="flex flex-col gap-[16px]">
               <div class="flex justify-between text-[12px]">
                 <span
-                  class="bg-[#22C55E29] text-[#118D57] font-[700] px-[6px] py-[2px] rounded-[6px]"
+                  class="bg-[#22C55E29] text-[#118D57] font-[700] px-[6px] py-[2px] rounded-[6px] leading-[20px]"
                 >
                   1-დან 2 წლამდე
                 </span>
-                <p class="text-[#919EAB] font-[400]">25 დეკ. 2023 13:00 PM</p>
+                <p class="text-[#919EAB] font-[400] leading-[18px]">
+                  25 დეკ. 2023 13:00 PM
+                </p>
               </div>
-              <h2 class="text-[18px] font-[700]">ღონისძიების დასახელება</h2>
+              <h2 class="text-[18px] font-[700] leading-[22px]">
+                ღონისძიების დასახელება
+              </h2>
               <p class="text-[14px] text-[#919EAB] font-[600]">
                 ძვირფასო მშობლებო. პარასკევს გვექნება საახალწლო ზეიმი. გთხოვთ
                 ბავშვებს ჩააცვათ შესაბამისად და გელოდებით
               </p>
               <div class="flex justify-end">
                 <button
-                  class="text-[13px] px-[8px] py-[4px] rounded-[8px] text-white bg-[#212B36]"
+                  class="text-[13px] px-[8px] py-[4px] rounded-[8px] text-white bg-[#212B36] leading-[22px]"
                 >
                   დადასტურება
                 </button>
