--- a/ივენთების შექმნა/modal.html
+++ b/ივენთების შექმნა/modal.html
@@ -5,14 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>KidNest</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <!-- modal -->
+  <body style="font-family: 'Noto Sans Georgian', sans-serif">
     <div
-      class="bg-[#444444]/50 fixed z-50 top-0 left-0 w-full min-h-screen flex lg:justify-center lg:items-center p-[24px] overflow-y-auto"
+      class="bg-[#444444]/50 fixed top-0 left-0 w-full h-full flex justify-center sm:items-center z-50 p-[24px] overflow-y-auto"
     >
-      <dialog
-        class="p-[24px] bg-white flex flex-col gap-[24px] w-11/12 sm:w-min rounded-[16px] shadow-[0_12px_24px_-4px] shadow-[#919EAB1F]"
+      <div
+        class="bg-white w-full sm:w-min h-fit rounded-[16px] flex flex-col gap-[24px] p-[24px]"
       >
         <h1 class="text-[18px] mb-[12px] font-[700]">ღონისძიების დამატება</h1>
         <!-- აღწერა -->
@@ -21,23 +26,33 @@
           <input
             type="text"
             placeholder="ჩაწერეთ ტექსტი"
-            class="text-[#919EAB] text-[14px] font-[400] border-[1px] border-[#919EAB33] rounded-[8px] px-[14px] py-[16px] w-full focus:outline-none"
+            class="placeholder:text-[#919EAB] text-[14px] font-[400] border-[1px] border-[#919EAB33] rounded-[8px] px-[14px] py-[16px] w-full focus:outline-none"
           />
         </label>
         <!-- დაწყების დრო -->
         <label class="flex flex-col gap-[12px]">
           <div class="text-[14px] text-[#212B36] font-[600]">დაწყების დრო</div>
           <div class="flex justify-between gap-[14px]">
-            <input
-              type="date"
-              placeholder="დაწყება"
-              class="w-[324px] h-[54px] border-[1px] border-[#919EAB33] rounded-[8px] py-[16px] px-[14px] text-[#919EAB] text-[14px] font-[400] focus:outline-none"
-            />
-            <input
-              type="date"
-              placeholder="დასრულება"
-              class="w-[324px] h-[54px] border-[1px] border-[#919EAB33] rounded-[8px] py-[16px] px-[14px] text-[#919EAB] text-[14px] font-[400] focus:outline-none"
-            />
+            <label class="relative w-fit h-[54px]">
+              <input
+                type="text"
+                placeholder="დაწყება"
+                class="pr-[40px] w-full sm:w-[324px] h-[54px] border-[1px] border-[#919EAB33] rounded-[8px] py-[16px] px-[14px] placeholder:text-[#919EAB] text-[14px] font-[400] focus:outline-none"
+              />
+              <button class="absolute top-1/2 -translate-y-1/2 right-[8px]">
+                <img src="./assets/ic-solar_calendar-mark-bold-duotone.png" />
+              </button>
+            </label>
+            <label class="relative w-fit h-[54px]">
+              <input
+                type="text"
+                placeholder="დასრულება"
+                class="pr-[40px] w-full sm:w-[324px] h-[54px] border-[1px] border-[#919EAB33] rounded-[8px] py-[16px] px-[14px] placeholder:text-[#919EAB] text-[14px] font-[400] focus:outline-none"
+              />
+              <button class="absolute top-1/2 -translate-y-1/2 right-[8px]">
+                <img src="./assets/ic-solar_calendar-mark-bold-duotone.png" />
+              </button>
+            </label>
           </div>
         </label>
         <!-- დამატებითი დეტალები -->
@@ -47,7 +62,7 @@
           </div>
           <textarea
             placeholder="აღწერეთ დამატებითი დეტალები თუ რა უნდა გაითვალისწინოს მშობელმა..."
-            class="border-[1px] border-[#919EAB33] rounded-[8px] py-[16px] px-[14px] text-[#919EAB] text-[14px] font-[400] focus:outline-none resize-none"
+            class="border-[1px] border-[#919EAB33] rounded-[8px] py-[16px] px-[14px] placeholder:text-[#919EAB] text-[14px] font-[400] focus:outline-none resize-none"
           ></textarea>
         </label>
         <!-- ჯგუფები -->
@@ -189,7 +204,7 @@
             შენახვა
           </button>
         </div>
-      </dialog>
+      </div>
     </div>
     <!-- modal -->
   </body>
