--- a/კვება/index.html
+++ b/კვება/index.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>KidNest</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <!-- header -->
+  <body style="font-family: 'Noto Sans Georgian', sans-serif">
+    <!-- header Desktop -->
     <header
-      class="py-[21px] px-[32px] h-[81] flex justify-between items-center"
+      class="py-[21px] px-[32px] h-[81] hidden sm:flex justify-between gap-[10px] items-center"
     >
       <div class="w-[326px]">
         <a href="/">
@@ -42,7 +48,17 @@
         </button>
       </nav>
     </header>
-    <!-- header -->
+    <!-- header Desktop -->
+
+    <!-- header Mobile -->
+    <header
+      class="w-full bg-white flex justify-between items-center sm:hidden p-[15px]"
+    >
+      <img src="./assets/ic-menu-item.png" />
+      <img src="./assets/logo.png" />
+      <img src="./assets/Flag_of_Georgia 1.png" />
+    </header>
+    <!-- header Mobile -->
 
     <!-- content -->
     <div
@@ -81,16 +97,16 @@
           <div
             class="flex flex-col md:flex-row items-start md:items-end gap-[5px]"
           >
-            <h2 class="text-[24px] font-[700] text-[#212B36]">
+            <h2 class="text-[24px] font-[700] text-[#212B36] leading-[36px]">
               კვების რაციონი
             </h2>
-            <h3 class="font-[400] text-[14px] text-[#212B36]">
+            <h3 class="font-[400] text-[14px] text-[#212B36] leading-[22px]">
               ცაგარელის ფილიალი
             </h3>
           </div>
           <div class="w-full flex justify-start">
             <button
-              class="text-[#919EAB] flex items-center justify-center flex"
+              class="text-[#919EAB] text-[12px] font-[400] leading-[18px] flex items-center justify-center flex"
             >
               <img src="./assets/back.png" class="size-[24px]" />
               უკან
@@ -98,17 +114,21 @@
           </div>
           <div class="w-full flex justify-between items-center">
             <div class="flex items-end gap-[10px]">
-              <h3 class="font-[400] text-[14px] text-[#212B36]">ჯგუფი:</h3>
-              <h2 class="text-[15px] md:text-[24px] font-[700] text-[#212B36]">
+              <h3 class="font-[400] text-[14px] text-[#212B36] leading-[22px]">
+                ჯგუფი:
+              </h3>
+              <h2
+                class="text-[15px] md:text-[24px] font-[700] text-[#212B36] leading-[36px]"
+              >
                 ჯგუფის სახელი
               </h2>
             </div>
             <!-- select input ის მხოლოდ სტილებით ედიტირება ვერ შევძელი -->
-            <button
-              class="flex gap-[8px] p-[8px] justify-between items-center text-[#637381] font-[700] text-[14px]"
-            >
+            <button class="flex gap-[8px] p-[8px] justify-between items-center">
               <img src="./assets/date_icon.svg" />
-              <span>თვე</span>
+              <span class="text-[#637381] font-[700] text-[14px] leading-[24px]"
+                >თვე</span
+              >
               <img src="./assets/drop-down-icon.svg" />
             </button>
           </div>
