--- a/ივენთების შექმნა/index.html
+++ b/ივენთების შექმნა/index.html
@@ -113,7 +113,7 @@
             </button>
           </div>
         </div>
-        <section class="w-full flex flex-wrap gap-[25px]">
+        <section class="w-full h-fit flex flex-wrap gap-[25px]">
           <!-- post -->
           <article
             class="w-full lg:odd:w-[calc(50%-25px)] lg:even:w-[calc(50%)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
