--- a/კვება/index.html
+++ b/კვება/index.html
@@ -184,11 +184,11 @@
             </div>
           </div>
           <div
-            class="flex flex-wrap [&>*:nth-child(7n)]:border-r-0 [&>*:nth-last-child(-n+7)]:border-b-0 text-[14px] font-[400]"
+            class="flex flex-wrap [&>*:nth-child(7n)]:border-r-0 [&>*:nth-last-child(-n+7)]:border-b-0 text-[14px] font-[400] [&>*:nth-child(7n-1)_div]:left-auto [&>*:nth-child(7n-1)_div]:right-[calc(100%)] [&>*:nth-child(7n)_div]:left-auto [&>*:nth-child(7n)_div]:right-[calc(100%)]"
           >
             <!-- გასული თვის თარიღის ფერით-->
             <div
-              class="w-[calc(14.29%-0.1px)] aspect-[1.28575] border-r-[1px] border-b-[1px] border-[#919EAB33] p-[8px] text-right text-[#919EAB] relative"
+              class="w-[calc(14.29%-0.1px)] aspect-[1.28575] border-r-[1px] border-b-[1px] border-[#919EAB33] p-[8px]text-right text-[#919EAB] relative"
             >
               <span class="absolute top-[8px] right-[8px] select-none z-10"
                 >26</span
@@ -484,9 +484,7 @@
             <div
               class="w-[calc(14.29%-0.1px)] aspect-[1.28575] border-r-[1px] border-b-[1px] border-[#919EAB33] p-[8px] text-right text-[#212B36] relative"
             >
-              <span class="absolute top-[8px] right-[8px] select-none z-10"
-                >21</span
-              >
+              <span class="text-right select-none">21</span>
             </div>
             <!-- აქტირუი თვის თარიღის ფერით -->
             <div
@@ -548,9 +546,7 @@
             <div
               class="w-[calc(14.29%-0.1px)] aspect-[1.28575] border-r-[1px] border-b-[1px] border-[#919EAB33] p-[8px] text-right text-[#212B36] relative"
             >
-              <span class="absolute top-[8px] right-[8px] select-none z-10"
-                >29</span
-              >
+              <span class="text-right select-none">29</span>
             </div>
             <!-- აქტირუი თვის თარიღის ფერით -->
             <div
