--- a/კვება/index.html
+++ b/კვება/index.html
@@ -183,6 +183,7 @@
               <span class="block lg:hidden">კვ</span>
             </div>
           </div>
+          <!-- ეს დივია მხოლოდ დასააფდეითებელი -->
           <div
             class="flex flex-wrap [&>*:nth-child(7n)]:border-r-0 [&>*:nth-last-child(-n+7)]:border-b-0 text-[14px] font-[400] [&>*:nth-child(7n-1)_div]:left-auto [&>*:nth-child(7n-1)_div]:right-[calc(100%)] [&>*:nth-child(7n)_div]:left-auto [&>*:nth-child(7n)_div]:right-[calc(100%)]"
           >
