--- a/ივენთების შექმნა/index.html
+++ b/ივენთების შექმნა/index.html
@@ -116,7 +116,32 @@
         <section class="w-full h-fit flex flex-wrap gap-[25px]">
           <!-- post -->
           <article
-            class="w-full lg:odd:w-[calc(50%-25px)] lg:even:w-[calc(50%)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
+            class="w-full lg:w-[calc(50%-12.5px)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
+          >
+            <div class="flex flex-col gap-[16px]">
+              <div class="flex justify-between text-[12px] gap-[3px]">
+                <span
+                  class="bg-[#22C55E29] text-[#118D57] font-[700] px-[6px] py-[2px] rounded-[6px] leading-[20px]"
+                >
+                  1-დან 2 წლამდე
+                </span>
+                <p class="text-[#919EAB] font-[400] leading-[18px]">
+                  25 დეკ. 2023 13:00 PM
+                </p>
+              </div>
+              <h2 class="text-[18px] font-[700] leading-[22px]">
+                ღონისძიების დასახელება
+              </h2>
+              <p class="text-[14px] text-[#919EAB] font-[600]">
+                ძვირფასო მშობლებო. პარასკევს გვექნება საახალწლო ზეიმი. გთხოვთ
+                ბავშვებს ჩააცვათ შესაბამისად და გელოდებით
+              </p>
+            </div>
+          </article>
+          <!-- post -->
+          <!-- post -->
+          <article
+            class="w-full lg:w-[calc(50%-12.5px)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
           >
             <div class="flex flex-col gap-[16px]">
               <div class="flex justify-between text-[12px]">
@@ -141,7 +166,7 @@
           <!-- post -->
           <!-- post -->
           <article
-            class="w-full lg:odd:w-[calc(50%-25px)] lg:even:w-[calc(50%)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
+            class="w-full lg:w-[calc(50%-12.5px)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
           >
             <div class="flex flex-col gap-[16px]">
               <div class="flex justify-between text-[12px]">
@@ -166,32 +191,7 @@
           <!-- post -->
           <!-- post -->
           <article
-            class="w-full lg:odd:w-[calc(50%-25px)] lg:even:w-[calc(50%)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
-          >
-            <div class="flex flex-col gap-[16px]">
-              <div class="flex justify-between text-[12px]">
-                <span
-                  class="bg-[#22C55E29] text-[#118D57] font-[700] px-[6px] py-[2px] rounded-[6px] leading-[20px]"
-                >
-                  1-დან 2 წლამდე
-                </span>
-                <p class="text-[#919EAB] font-[400] leading-[18px]">
-                  25 დეკ. 2023 13:00 PM
-                </p>
-              </div>
-              <h2 class="text-[18px] font-[700] leading-[22px]">
-                ღონისძიების დასახელება
-              </h2>
-              <p class="text-[14px] text-[#919EAB] font-[600]">
-                ძვირფასო მშობლებო. პარასკევს გვექნება საახალწლო ზეიმი. გთხოვთ
-                ბავშვებს ჩააცვათ შესაბამისად და გელოდებით
-              </p>
-            </div>
-          </article>
-          <!-- post -->
-          <!-- post -->
-          <article
-            class="w-full lg:odd:w-[calc(50%-25px)] lg:even:w-[calc(50%)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
+            class="w-full lg:w-[calc(50%-12.5px)] bg-white shadow-[0_12px_24px_-4px] shadow-[#919EAB1F] flex p-[24px]"
           >
             <div class="flex flex-col gap-[16px]">
               <div class="flex justify-between text-[12px]">
